--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,7 +1,15 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+# vagrantfile
+
 VAGRANT_API_VERSION=2
 Vagrant.configure(VAGRANT_API_VERSION) do |config|
   config.vm.box = "hashicorp/precise64"
+  config.vm.provision :puppet do |puppet|
+    puppet.manifests_path = "manifests"
+    puppet.options = ['--verbose --debug']
+    puppet.module_path    = [ 'modules' ]
+    puppet.manifest_file = "base.pp"
+  end  
 end
